Get bosh ca cert from director manifest
also, update env variables name and source directory path

[#147502127]

Signed-off-by: Derik Evangelista <devangelista@pivotal.io>

--- a/tasks/bbr-backup-ert/task.yml
+++ b/tasks/bbr-backup-ert/task.yml
@@ -15,10 +15,11 @@ outputs:
 params:
   SKIP_SSL_VALIDATION: false
   OPSMAN_URL:
-  OPSMAN_HOST:
   OPSMAN_USERNAME:
   OPSMAN_PASSWORD:
-  OPSMAN_SSH_KEY:
+  JUMPBOX_USER:
+  JUMPBOX_HOST:
+  JUMPBOX_SSH_KEY:
 
 run:
   path: bbr-pipeline-tasks-repo/tasks/bbr-backup-ert/task.sh
