--- a/pipeline.sample.yml
+++ b/pipeline.sample.yml
@@ -20,7 +20,7 @@ jobs:
   plan:
   - aggregate:
     - get: bbr-pipeline-tasks-repo
-    - get: bbr-github-release
+    - get: bbr-release
   - task: extract-binary
     config:
       platform: linux
@@ -30,7 +30,7 @@ jobs:
           repository: cloudfoundrylondon/bbr-pipeline
           tag: release-candidate
       inputs:
-      - name: bbr-github-release
+      - name: bbr-release
       outputs:
       - name: binary
       run:
@@ -38,7 +38,7 @@ jobs:
         args:
         - -c
         - |
-          tar -xvf bbr-github-release/bbr*.tar
+          tar -xvf bbr-release/bbr*.tar
           cp releases/bbr binary/
   - task: bbr-backup-ert
     privileged: true
@@ -53,6 +53,13 @@ jobs:
   - put: ert-backup-artifact
     params:
       file: backup-artifact/ert-backup.tar
+
+resource_types:
+- name: pivnet
+  type: docker-image
+  source:
+    repository: pivotalcf/pivnet-resource
+    tag: latest-final
 
 resources:
 - name: bbr-pipeline-tasks-repo
@@ -78,9 +85,8 @@ resources:
     access_key_id: {{storage-access-key-id}}
     secret_access_key: {{storage-secret-access-key}}
     versioned_file: ert-backup.zip
-- name: bbr-github-release
-  type: github-release
+- name: bbr-release
+  type: pivnet
   source:
-    user: "pivotal-cf"
-    repository: bosh-backup-and-restore
-    access_token: {{github-access-token}}
+    api_token: {{pivnet-api-token}}
+    product_slug: p-bosh-backup-and-restore
