Run bbr-backup-ert from a tagged worker
to keep it consistent with how cfops is currently deployed

[#145837859]

Signed-off-by: Derik Evangelista <devangelista@pivotal.io>

--- a/secrets.sample.yml
+++ b/secrets.sample.yml
@@ -7,3 +7,4 @@ storage-region: eu-west-1
 storage-endpoint: s3-eu-west-1.amazonaws.com
 storage-access-key-id: example-key-id
 storage-secret-access-key: example-secret-access-key
+concourse-worker-tag: some-worker-tag
