--- a/pipeline.sample.yml
+++ b/pipeline.sample.yml
@@ -22,6 +22,8 @@ jobs:
     - get: bbr-pipeline-tasks-repo
     - get: bbr-release
   - task: extract-binary
+    tags:
+    - {{concourse-worker-tag}}
     config:
       platform: linux
       image_resource:
@@ -41,15 +43,14 @@ jobs:
           tar -xvf bbr-release/bbr*.tar
           cp releases/bbr binary/
   - task: bbr-backup-ert
-    privileged: true
+    tags:
+    - {{concourse-worker-tag}}
     file: bbr-pipeline-tasks-repo/tasks/bbr-backup-ert/task.yml
     params:
       SKIP_SSL_VALIDATION: {{skip-ssl-validation}}
       OPSMAN_URL: {{opsman-url}}
       OPSMAN_USERNAME: {{opsman-username}}
       OPSMAN_PASSWORD: {{opsman-password}}
-      JUMPBOX_HOST: {{jumpbox-host}}
-      JUMPBOX_SSH_KEY: {{jumpbox-ssh-key}}
   - put: ert-backup-artifact
     params:
       file: backup-artifact/ert-backup.tar
