Use correct extension on ert-backup
[#147502127]

Signed-off-by: Derik Evangelista <devangelista@pivotal.io>

--- a/pipeline.sample.yml
+++ b/pipeline.sample.yml
@@ -85,7 +85,7 @@ resources:
     endpoint: {{storage-endpoint}}
     access_key_id: {{storage-access-key-id}}
     secret_access_key: {{storage-secret-access-key}}
-    versioned_file: ert-backup.zip
+    versioned_file: ert-backup.tar
 - name: bbr-release
   type: pivnet
   source:
