--- a/pipeline.sample.yml
+++ b/pipeline.sample.yml
@@ -4,6 +4,7 @@ jobs:
   plan:
   - aggregate:
     - get: bbr-pipeline-tasks-repo
+      trigger: true
   - task: export-om-installation
     file: bbr-pipeline-tasks-repo/tasks/export-om-installation/task.yml
     params:
@@ -20,7 +21,9 @@ jobs:
   plan:
   - aggregate:
     - get: bbr-pipeline-tasks-repo
+      trigger: true
     - get: bbr-release
+      trigger: true
   - task: extract-binary
     tags:
     - {{concourse-worker-tag}}
@@ -60,7 +63,9 @@ jobs:
   plan:
   - aggregate:
     - get: bbr-pipeline-tasks-repo
+      trigger: true
     - get: bbr-release
+      trigger: true
   - task: extract-binary
     tags:
     - {{concourse-worker-tag}}
