--- a/secrets.sample.yml
+++ b/secrets.sample.yml
@@ -1,4 +1,5 @@
 skip-ssl-validation: true
+pivnet-api-token: example-pivnet-token
 opsman-url: https://pcf.example.com
 opsman-username: example-user
 opsman-password: example-password
