Adds product_version parameter to the bbr-release resource.
Without pinning the version number the pipeline can fail.  E.g. If
you have SDK release access through Pivnet.

--- a/secrets.sample.yml
+++ b/secrets.sample.yml
@@ -1,5 +1,6 @@
 skip-ssl-validation: true
 pivnet-api-token: example-pivnet-token
+bbr-version: 1.2.0
 opsman-url: https://pcf.example.com
 opsman-username: example-user
 opsman-password: example-password
