--- a/pipeline.sample.yml
+++ b/pipeline.sample.yml
@@ -145,3 +145,4 @@ resources:
   source:
     api_token: ((pivnet-api-token))
     product_slug: p-bosh-backup-and-restore
+    product_version: ((bbr-version))
