Added client id and client secret variables as an alternative to ops manager credentials. Updated pipeline with the passed client id and secret variables. Updated the om-cmd script to use client id if provided instead of Ops Manager credentials

--- a/secrets.sample.yml
+++ b/secrets.sample.yml
@@ -4,6 +4,8 @@ bbr-version: 1.2.0
 opsman-url: https://pcf.example.com
 opsman-username: example-user
 opsman-password: example-password
+client-id: example-client-id
+client-secret: example-client-secret
 backup-artifact-bucket: thebucket
 storage-region: eu-west-1
 storage-endpoint: s3-eu-west-1.amazonaws.com
