--- a/pipeline.sample.yml
+++ b/pipeline.sample.yml
@@ -11,6 +11,8 @@ jobs:
       OPSMAN_URL: ((opsman-url))
       OPSMAN_USERNAME: ((opsman-username))
       OPSMAN_PASSWORD: ((opsman-password))
+      CLIENT_ID: ((client-id))
+      CLIENT_SECRET: ((client-secret))
   - put: om-backup-artifact
     params:
       file: om-installation/installation.zip
@@ -51,6 +53,8 @@ jobs:
       OPSMAN_URL: ((opsman-url))
       OPSMAN_USERNAME: ((opsman-username))
       OPSMAN_PASSWORD: ((opsman-password))
+      CLIENT_ID: ((client-id))
+      CLIENT_SECRET: ((client-secret))
     on_failure:
       task: bbr-cleanup-ert
       file: bbr-pipeline-tasks-repo/tasks/bbr-cleanup-ert/task.yml
@@ -59,6 +63,8 @@ jobs:
         OPSMAN_URL: ((opsman-url))
         OPSMAN_USERNAME: ((opsman-username))
         OPSMAN_PASSWORD: ((opsman-password))
+        CLIENT_ID: ((client-id))
+        CLIENT_SECRET: ((client-secret))
   - put: ert-backup-bucket
     params:
       file: ert-backup-artifact/ert-backup.tar
@@ -99,6 +105,8 @@ jobs:
       OPSMAN_URL: ((opsman-url))
       OPSMAN_USERNAME: ((opsman-username))
       OPSMAN_PASSWORD: ((opsman-password))
+      CLIENT_ID: ((client-id))
+      CLIENT_SECRET: ((client-secret))
     on_failure:
       task: bbr-cleanup-director
       tags:
@@ -109,6 +117,8 @@ jobs:
         OPSMAN_URL: ((opsman-url))
         OPSMAN_USERNAME: ((opsman-username))
         OPSMAN_PASSWORD: ((opsman-password))
+        CLIENT_ID: ((client-id))
+        CLIENT_SECRET: ((client-secret))
   - put: director-backup-bucket
     params:
       file: director-backup-artifact/director-backup.tar
