Define CLIENT_ID and CLIENT_SECRET in all task.yml
[#159814758]

--- a/tasks/bbr-backup-ert/task.yml
+++ b/tasks/bbr-backup-ert/task.yml
@@ -17,6 +17,8 @@ params:
   OPSMAN_URL:
   OPSMAN_USERNAME:
   OPSMAN_PASSWORD:
+  CLIENT_ID:
+  CLIENT_SECRET:
 
 run:
   path: bbr-pipeline-tasks-repo/tasks/bbr-backup-ert/task.sh
