Support BOSH_ALL_PROXY in bbr-cleanup-ert task
Move construction of BOSH_ALL_PROXY into export-director-metadata script

[#160403281]

Signed-off-by: Josh Hill <jhill@pivotal.io>

--- a/secrets.sample.yml
+++ b/secrets.sample.yml
@@ -3,6 +3,7 @@ pivnet-api-token: example-pivnet-token
 opsman-url: https://pcf.example.com
 opsman-username: example-user
 opsman-password: example-password
+opsman-private-key: # optional, Ops Manager VM SSH private key
 client-id: example-client-id
 client-secret: example-client-secret
 backup-artifact-bucket: thebucket
