--- a/pipeline.sample.yml
+++ b/pipeline.sample.yml
@@ -17,7 +17,7 @@ jobs:
 
 - name: bbr-backup-ert
   serial: true
-  serial_group: [bbr-backup]
+  serial_groups: [bbr-backup]
   plan:
   - aggregate:
     - get: bbr-pipeline-tasks-repo
@@ -66,7 +66,7 @@ jobs:
 
 - name: bbr-backup-director
   serial: true
-  serial_group: [bbr-backup]
+  serial_groups: [bbr-backup]
   plan:
   - aggregate:
     - get: bbr-pipeline-tasks-repo
