Add bosh-cli to docker image
[#160717638]

Signed-off-by: Glen Rodgers <grodgers@pivotal.io>

--- a/docker/pipeline.yml
+++ b/docker/pipeline.yml
@@ -61,6 +61,7 @@ jobs:
           which om
           which jq
           which sshuttle
+          which bosh
 
 - name: promote-image
   public: true
