--- a/tasks/bbr-backup-director/task.yml
+++ b/tasks/bbr-backup-director/task.yml
@@ -4,6 +4,7 @@ image_resource:
   type: docker-image
   source:
     repository: cloudfoundrylondon/backup-and-restore
+    tag: final
 
 inputs:
   - name: bbr-pipeline-tasks-repo
