Install openssh into bbr-pipeline image
Removed deprecated syntax for vars
[#160547169]

Signed-off-by: Glen Rodgers <grodgers@pivotal.io>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.7
-RUN apk --update --no-cache add bash jq python py2-pip curl wget
+RUN apk --update --no-cache add bash openssh jq python py2-pip curl wget
 RUN pip install sshuttle
 RUN apk del py2-pip
 RUN curl -s https://api.github.com/repos/pivotal-cf/om/releases/latest \
