Removed sshuttle, pip, python
[#160547169]

Signed-off-by: Emmanouil Kiagias <ekiagias@pivotal.io>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,5 @@
 FROM alpine:3.7
-RUN apk --update --no-cache add bash openssh jq python py2-pip curl wget
-RUN pip install sshuttle
-RUN apk del py2-pip
+RUN apk --update --no-cache add bash openssh jq curl wget
 RUN curl -s https://api.github.com/repos/pivotal-cf/om/releases/latest \
      | jq -r '.assets[] | select(.name=="om-linux") | .browser_download_url' \
      | wget -qi - -O /bin/om && chmod +x /bin/om
