Massive renaming ert to pas

--- a/pipeline.sample.yml
+++ b/pipeline.sample.yml
@@ -15,7 +15,7 @@ jobs:
     params:
       file: om-installation/installation.zip
 
-- name: bbr-backup-ert
+- name: bbr-backup-pas
   serial: true
   plan:
   - aggregate:
@@ -25,10 +25,10 @@ jobs:
     tags:
     - ((concourse-worker-tag))
     file: bbr-pipeline-tasks-repo/tasks/extract-bbr-binary/task.yml
-  - task: bbr-backup-ert
+  - task: bbr-backup-pas
     tags:
     - ((concourse-worker-tag))
-    file: bbr-pipeline-tasks-repo/tasks/bbr-backup-ert/task.yml
+    file: bbr-pipeline-tasks-repo/tasks/bbr-backup-pas/task.yml
     params:
       SKIP_SSL_VALIDATION: ((skip-ssl-validation))
       OPSMAN_URL: ((opsman-url))
@@ -36,17 +36,17 @@ jobs:
       OPSMAN_PASSWORD: ((opsman-password))
       OPSMAN_PRIVATE_KEY: ((opsman-private-key))
     on_failure:
-      task: bbr-cleanup-ert
-      file: bbr-pipeline-tasks-repo/tasks/bbr-cleanup-ert/task.yml
+      task: bbr-cleanup-pas
+      file: bbr-pipeline-tasks-repo/tasks/bbr-cleanup-pas/task.yml
       params:
         SKIP_SSL_VALIDATION: ((skip-ssl-validation))
         OPSMAN_URL: ((opsman-url))
         OPSMAN_USERNAME: ((opsman-username))
         OPSMAN_PASSWORD: ((opsman-password))
         OPSMAN_PRIVATE_KEY: ((opsman-private-key))
-  - put: ert-backup-bucket
+  - put: pas-backup-bucket
     params:
-      file: ert-backup-artifact/ert-backup.tar
+      file: pas-backup-artifact/pas-backup.tar
 
 - name: bbr-backup-director
   serial: true
@@ -105,7 +105,7 @@ resources:
     access_key_id: ((storage-access-key-id))
     secret_access_key: ((storage-secret-access-key))
     versioned_file: installation.zip
-- name: ert-backup-bucket
+- name: pas-backup-bucket
   type: s3
   source:
     bucket: ((backup-artifact-bucket))
@@ -113,7 +113,7 @@ resources:
     endpoint: ((storage-endpoint))
     access_key_id: ((storage-access-key-id))
     secret_access_key: ((storage-secret-access-key))
-    versioned_file: ert-backup.tar
+    versioned_file: pas-backup.tar
 - name: director-backup-bucket
   type: s3
   source:
