--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,10 @@
-FROM alpine:3.7
-RUN apk --update --no-cache add bash openssh jq curl wget
+FROM ubuntu:xenial
+RUN apt-get update && apt-get install -y \
+  openssh-client \
+  curl \
+  wget \
+  jq \
+  && rm -rf /var/lib/apt/lists/*
 RUN curl -s https://api.github.com/repos/pivotal-cf/om/releases/latest \
      | jq -r '.assets[] | select(.name=="om-linux") | .browser_download_url' \
      | wget -qi - -O /bin/om && chmod +x /bin/om
@@ -7,4 +12,3 @@ RUN curl -s https://api.github.com/repos/cloudfoundry/bosh-cli/releases/latest \
     | jq -r '.assets[] | .browser_download_url' \
     | grep linux \
     | wget -qi - -O /bin/bosh && chmod +x /bin/bosh
-
