Document the pks tasks
[#160717966]

Signed-off-by: Glen Rodgers <grodgers@pivotal.io>

--- a/tasks/bbr-backup-pks-clusters/task.yml
+++ b/tasks/bbr-backup-pks-clusters/task.yml
@@ -1,5 +1,6 @@
 ---
 platform: linux
+
 image_resource:
   type: docker-image
   source:
@@ -8,18 +9,31 @@ image_resource:
 
 inputs:
   - name: bbr-pipeline-tasks-repo
+    # Directory containing the bbr executable
   - name: binary
-outputs:
-  - name: pks-clusters-backup-artifact
 
-params:
-  SKIP_SSL_VALIDATION: false
-  OPSMAN_URL:
-  OPSMAN_USERNAME:
-  OPSMAN_PASSWORD:
-  OPSMAN_PRIVATE_KEY:
-  CLIENT_ID:
-  CLIENT_SECRET:
+outputs:
+    # Contains `pks-clusters-backup.tar` artifact created by `bbr deployment --all-deployments backup`
+  - name: pks-clusters-backup-artifact
 
 run:
   path: bbr-pipeline-tasks-repo/tasks/bbr-backup-pks-clusters/task.sh
+
+params:
+  # The Ops Manager URL, e.g. https://pcf.example.com
+  OPSMAN_URL:
+
+  # If true, SSL validation will be skipped when connecting to Ops Manager API
+  SKIP_SSL_VALIDATION: false
+
+  # Client credentials for Ops Manager API. If empty, user credentials will be used
+  CLIENT_ID:
+  CLIENT_SECRET:
+
+  # User credentials for Ops Manager API
+  OPSMAN_USERNAME:
+  OPSMAN_PASSWORD:
+
+  # The SSH private key for the Ops Manager VM
+  # If provided, a SSH tunnel through the Ops Manager VM is created and used by bbr
+  OPSMAN_PRIVATE_KEY:
