--- a/tasks/extract-bbr-binary/task.yml
+++ b/tasks/extract-bbr-binary/task.yml
@@ -8,9 +8,12 @@ image_resource:
     tag: release-candidate
 
 inputs:
-- name: bbr-release
+    # Contains the latest release of bbr from GitHub
+  - name: bbr-release
+
 outputs:
-- name: binary
+    # Directory containing the bbr executable to use in other tasks
+  - name: binary
 
 run:
   path: bash
