--- a/tasks/extract-bbr-binary/task.yml
+++ b/tasks/extract-bbr-binary/task.yml
@@ -5,7 +5,7 @@ image_resource:
   type: docker-image
   source:
     repository: cloudfoundrylondon/bbr-pipeline
-    tag: release-candidate
+    tag: final
 
 inputs:
     # Contains the latest release of bbr from GitHub
