--- a/tasks/unlock-pks/task.yml
+++ b/tasks/unlock-pks/task.yml
@@ -5,6 +5,7 @@ image_resource:
   type: docker-image
   source:
     repository: cloudfoundrylondon/backup-and-restore
+    tag: final
 
 inputs:
   - name: bbr-pipeline-tasks-repo
