Add fly to sample pipeline image
[#160717966]

Signed-off-by: Glen Rodgers <grodgers@pivotal.io>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,3 +12,6 @@ RUN curl -s https://api.github.com/repos/cloudfoundry/bosh-cli/releases/latest \
     | jq -r '.assets[] | .browser_download_url' \
     | grep linux \
     | wget -qi - -O /bin/bosh && chmod +x /bin/bosh
+RUN curl -s https://api.github.com/repos/concourse/concourse/releases/latest \
+    | jq -r '.assets[] | select(.name=="fly_linux_amd64") | .browser_download_url' \
+    | wget -qi - -O /bin/fly && chmod +x /bin/fly
