--- a/docker/pipeline.yml
+++ b/docker/pipeline.yml
@@ -69,7 +69,7 @@ jobs:
           which jq
           which bosh
           which ssh
-
+          which fly
 - name: promote-image
   public: true
   serial: true
