--- a/tasks/unlock-pks/task.yml
+++ b/tasks/unlock-pks/task.yml
@@ -4,7 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: cloudfoundrylondon/backup-and-restore
+    repository: cloudfoundrylondon/bbr-pipeline
+    tag: final
 
 inputs:
   - name: bbr-pipeline-tasks-repo
