Test that netcat is available in docker image
[#160717966]

--- a/docker/pipeline.yml
+++ b/docker/pipeline.yml
@@ -70,6 +70,7 @@ jobs:
           which bosh
           which ssh
           which fly
+          which nc
 - name: promote-image
   public: true
   serial: true
